; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_rdma_transport.c_rds_rdma_listen_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_rdma_transport.c_rds_rdma_listen_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rds_rdma_listen_id = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [7 x i8] c"cm %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @rds_rdma_listen_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rds_rdma_listen_stop() #0 {
  %1 = load i32*, i32** @rds_rdma_listen_id, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32*, i32** @rds_rdma_listen_id, align 8
  %5 = call i32 @rdsdebug(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32* %4)
  %6 = load i32*, i32** @rds_rdma_listen_id, align 8
  %7 = call i32 @rdma_destroy_id(i32* %6)
  store i32* null, i32** @rds_rdma_listen_id, align 8
  br label %8

8:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @rdsdebug(i8*, i32*) #1

declare dso_local i32 @rdma_destroy_id(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
